--- a/web/pages/home.html
+++ b/web/pages/home.html
@@ -240,7 +240,7 @@
             //难度
             updateText('networkDifficulty', formatNumber(lastStats.network.difficulty.toString(), ' '));
             updateText('blockchainHeight', formatNumber(lastStats.network.height.toString(), ' '));
-            updateText('lastHash', lastStats.lastblock.hash).setAttribute('href', getBlockchainUrl(lastStats.lastblock.hash));
+            updateText('lastHash', lastStats.lastblock.hash).setAttribute('href', getBlockchainUrl(explorHost,lastStats.lastblock.hash));
 
             if (lastStats.config.networkFee) {
                 let networkFeePercent = lastStats.config.networkFee / 100;
