--- a/web/pages/payments.html
+++ b/web/pages/payments.html
@@ -131,7 +131,7 @@ function parsePayment(time, serializedPayment){
 // Get payment cells
 function getPaymentCells(payment){
     return '<td class="col1">' + formatDate(payment.time) + '</td>' +
-           '<td class="col2">' + formatPaymentLink(payment.hash) + '</td>' +
+           '<td class="col2">' + formatPaymentLink(explorHost,payment.hash) + '</td>' +
            '<td class="col3">' + getReadableCoins(payment.amount,0,'bbc') + '</td>' +
            '<td class="col4">' + getFixed(payment.fee,4) + '</td>' +
            //'<td class="col5">' + payment.mixin + '</td>' +
