--- a/web/pages/getting_started.html
+++ b/web/pages/getting_started.html
@@ -142,8 +142,8 @@ currentPage = {
             updateTextClasses('examplePort', lastStats.config.ports[0].port.toString());
         }
 
-        updateText('miningPoolHost', getPoolHost(api));
-        updateTextClasses('exampleHost', getPoolHost(api));
+        updateText('miningPoolHost', getPoolHost());
+        updateTextClasses('exampleHost', getPoolHost());
         updateText('paymentIdSeparator', lastStats.config.paymentIdSeparator);
         updateText('fixedDiffSeparator', lastStats.config.fixedDiffSeparator);
         if (!lastStats.config.fixedDiffEnabled) $('#fixedDiff').hide();
