--- a/web/admin.html
+++ b/web/admin.html
@@ -34,6 +34,10 @@
                             <i class="fa fa-eye"></i> Monitoring
                         </a></li>
 
+                    <li><a class="hot_link" data-page="admin/miner_management.html" href="#miner_management">
+                        <i class="fa fa-user"></i> Miner Management
+                    </a></li>
+
                     <li><a class="hot_link" data-page="admin/userslist.html" href="#users_list">
                             <i class="fa fa-users"></i> Users List
                         </a></li>
@@ -42,9 +46,10 @@
                             <i class="fa fa-link"></i> Ports Usage
                         </a></li>
 
+                    <!--
                     <li><a class="hot_link" data-page="admin/tools.html" href="#tools">
                             <i class="fa fa-gears"></i> Tools
-                        </a></li>
+                        </a></li>-->
 
                     <li class="sign-out"><a class="hot_link" href="/">
                             <i class="fa fa-sign-out"></i> Return to Pool
@@ -57,7 +62,20 @@
         <!-- Page content -->
         <div id="page-wrapper">
             <div id="page"></div>
-            <p id="loading" class="text-center"><i class="fa fa-circle-o-notch fa-spin"></i></p>
+            <!--<p id="loading" class="text-center"><i class="fa fa-circle-o-notch fa-spin"></i></p>-->
+            <div id="loading" class="loadBac">
+                <div class="loadEffect">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>           
+
         </div>
 
     </div>
